# toyimk

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: MacOSXBundleInfo.plist.in
dmg/: background.drawio  config.py  toyimk-white.icns  toyimk.icns
dmg/en.lproj/: InfoPlist.strings
src/: controller.swift  server.swift
